use http and q services for server calls. replace static data with json file.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
-      <link rel="stylesheet" type="text/css" href="styles/main.css">
+      <link rel="stylesheet" type="text/css" href="src/styles/main.css">
     </head>
 
     <body class="exp-mgr-wrapper" ng-app="expMgrApp">
@@ -15,12 +15,12 @@
               <div class="container-fluid">
                 <a href="#home">
                     <div class="navbar-header em-logo">
-                        <img src="resource/pngs/logo8.png" /><span class="logo">EM</span>
+                        <img src="src/resource/pngs/logo8.png" /><span class="logo">EM &nbsp;</span>
                     </div>
                 </a>
-                <ul class="nav navbar-nav">
-                  <li class=""><a href="#income"><i class="fa fa-angle-double-down"></i> Income</a></li>
-                  <li><a href="#expense"><i class="fa fa-angle-double-up"></i> Expense</a></li>
+                <ul class="nav navbar-nav menus">
+                  <li><a href="#income"> Income</a></li>
+                  <li><a href="#expense"> Expense</a></li>
                 </ul>
               </div>
             </nav>
@@ -45,16 +45,16 @@
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-messages.min.js"></script>
         <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.8/angular-route.min.js"></script>
 
-        <script type="text/javascript" src="scripts/main.js"></script>
-        <script type="text/javascript" src="scripts/routes.js"></script>
-        <script type="text/javascript" src="scripts/inc-ctrl.js"></script>
-        <script type="text/javascript" src="scripts/exp-ctrl.js"></script>
-        <script type="text/javascript" src="scripts/common/services/data-srv.js"></script>
-        <script type="text/javascript" src="scripts/common/directives/valid-amount-dir.js"></script>
-        <script type="text/javascript" src="scripts/directives/valid-note-dir.js"></script>
-        <script type="text/javascript" src="scripts/services/amount-count-srv.js"></script>
-        <script type="text/javascript" src="scripts/services/expense-mgr-srv.js"></script>
-        <script type="text/javascript" src="scripts/services/income-mgr-srv.js"></script>
+        <script type="text/javascript" src="src/scripts/main.js"></script>
+        <script type="text/javascript" src="src/scripts/routes.js"></script>
+        <script type="text/javascript" src="src/scripts/inc-ctrl.js"></script>
+        <script type="text/javascript" src="src/scripts/exp-ctrl.js"></script>
+        <script type="text/javascript" src="src/scripts/common/services/data-srv.js"></script>
+        <script type="text/javascript" src="src/scripts/common/directives/valid-amount-dir.js"></script>
+        <script type="text/javascript" src="src/scripts/directives/valid-note-dir.js"></script>
+        <script type="text/javascript" src="src/scripts/services/amount-count-srv.js"></script>
+        <script type="text/javascript" src="src/scripts/services/expense-mgr-srv.js"></script>
+        <script type="text/javascript" src="src/scripts/services/income-mgr-srv.js"></script>
 		</body>
 
 </html>
