--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
                 <ul class="nav navbar-nav menus">
                   <li><a href="#income"> Income</a></li>
                   <li><a href="#expense"> Expense</a></li>
+                  <li><a href="#report"> Report</a></li>
                 </ul>
               </div>
             </nav>
@@ -49,6 +50,7 @@
         <script type="text/javascript" src="src/scripts/routes.js"></script>
         <script type="text/javascript" src="src/scripts/inc-ctrl.js"></script>
         <script type="text/javascript" src="src/scripts/exp-ctrl.js"></script>
+        <script type="text/javascript" src="src/scripts/rep-ctrl.js"></script>
         <script type="text/javascript" src="src/scripts/common/services/data-srv.js"></script>
         <script type="text/javascript" src="src/scripts/common/directives/valid-amount-dir.js"></script>
         <script type="text/javascript" src="src/scripts/directives/valid-note-dir.js"></script>
